830pm hero done 28th sep

--- a/index.html
+++ b/index.html
@@ -18,27 +18,48 @@
         class="container_custom d-flex justify-content-between align-items-center py-3"
       >
         <div class="logo_custom">
-          <img src="images/smalllogo.png" alt="Lil Italy Logo" />
+          <img
+            src="images/smalllogo-removebg-preview.png"
+            alt="Lil Italy Logo"
+          />
         </div>
 
-        <!-- <div class="d-flex">
-          <p class="fs-4 menuitems_custom px-3">Home</p>
-          <p class="fs-4 menuitems_custom px-3">About</p>
-          <p class="fs-4 menuitems_custom px-3">Contact</p>
-        </div> -->
+        <div class="d-flex button_and_menuitems">
+          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">About</p>
+          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Venue</p>
+          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Concept</p>
 
-        <div class="">
-          <button class="btn btn-danger menubutton_custom">Explore</button>
-          <button class="btn btn-danger menubutton_custom">Book</button>
-          <button class="btn btn-danger menubutton_custom">Contact</button>
+          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Contact</p>
+
+          <button
+            class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts"
+          >
+            Explore
+          </button>
+          <button class="btn btn-danger menubutton_custom all_menu_items_fonts">
+            Book
+          </button>
+          <button class="btn btn-danger menubutton_custom all_menu_items_fonts">
+            Contact
+          </button>
         </div>
       </nav>
-
-      <!-- Hero -->
-      <div class="hero">
-        <img src="https://placehold.co/1200x700" alt="Hero" class="w-100" />
-      </div>
     </div>
+
+    <!-- Hero -->
+    <!-- Hero Split -->
+    <section class="hero-split">
+      <div class="hero-text hero_rounded">
+        <h1 class="main_hero_title_custom">Welcome to Lil Italy</h1>
+        <p>
+          Cozy family-run Italian bistro & café in Stockholm. Authentic food,
+          coffee, cocktails, lunch & dinner. Warm, casual, modern Italian vibes.
+          Book online or walk in anytime.
+        </p>
+        <button class="btn-custom">Book Now</button>
+      </div>
+      <div class="hero-img hero_rounded"></div>
+    </section>
 
     <!-- About -->
     <section class="split">
