--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,9 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="css/splide.min.css" />
+    <script src="js/splide.min.js"></script>
   </head>
   <body>
-    <div class="outer_custom">
+    <div class="outer_custom original_nav">
       <!-- Navbar -->
       <nav
         class="container_custom d-flex justify-content-between align-items-center py-3"
@@ -25,22 +28,68 @@
         </div>
 
         <div class="d-flex button_and_menuitems">
-          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">About</p>
-          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Venue</p>
-          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Concept</p>
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">About</a>
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Venue</a>
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Where</a>
 
-          <p class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Contact</p>
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Contact</a>
 
+          <div class="extra_button">
+            <button
+              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            >
+              Reserve
+            </button>
+            <button
+              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            >
+              Contact
+            </button>
+          </div>
           <button
-            class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts"
+            class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
           >
             Explore
           </button>
-          <button class="btn btn-danger menubutton_custom all_menu_items_fonts">
-            Book
-          </button>
-          <button class="btn btn-danger menubutton_custom all_menu_items_fonts">
-            Contact
+        </div>
+      </nav>
+    </div>
+
+    <div class="outer_custom scroll_nav">
+      <!-- Navbar -->
+      <nav
+        class="container_custom d-flex justify-content-between align-items-center py-3"
+      >
+        <div class="logo_custom">
+          <img
+            src="images/smalllogo-removebg-preview.png"
+            alt="Lil Italy Logo"
+          />
+        </div>
+
+        <div class="d-flex button_and_menuitems">
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">About</a>
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Venue</a>
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Where</a>
+
+          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Contact</a>
+
+          <div class="extra_button">
+            <button
+              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            >
+              Reserve
+            </button>
+            <button
+              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            >
+              Contact
+            </button>
+          </div>
+          <button
+            class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
+          >
+            Explore
           </button>
         </div>
       </nav>
@@ -49,16 +98,40 @@
     <!-- Hero -->
     <!-- Hero Split -->
     <section class="hero-split">
-      <div class="hero-text hero_rounded">
+      <div class="hero-text hero_rounded hero_padding">
         <h1 class="main_hero_title_custom">Welcome to Lil Italy</h1>
         <p>
-          Cozy family-run Italian bistro & café in Stockholm. Authentic food,
-          coffee, cocktails, lunch & dinner. Warm, casual, modern Italian vibes.
-          Book online or walk in anytime.
+          <strong
+            >Cozy family-run Italian bistro & café in Södermalm, Stockholm.
+            Authentic food, coffee, cocktails, lunch & dinner. Warm, casual,
+            modern Italian food.
+          </strong>
+          <br /><br />
+          With family roots in Italy and over a decade in hospitality, we blend
+          tradition with a modern touch. From morning espresso to late-night
+          cocktails, our bistro welcomes everyone. Book online or walk in
+          anytime.
         </p>
-        <button class="btn-custom">Book Now</button>
+        <button class="btn-custom all_menu_items_fonts">Reserve</button>
       </div>
-      <div class="hero-img hero_rounded"></div>
+      <!-- Splide root -->
+      <div class="hero-img">
+        <div class="splide">
+          <div class="splide__track">
+            <ul class="splide__list">
+              <li class="splide__slide hero_rounded">
+                <img src="images/9.jpg" alt="" />
+              </li>
+              <li class="splide__slide hero_rounded">
+                <img src="images/10.jpg" alt="" />
+              </li>
+              <li class="splide__slide hero_rounded">
+                <img src="images/2.jpg" alt="" />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- About -->
