--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+
     <link rel="stylesheet" href="css/splide.min.css" />
     <script src="js/splide.min.js"></script>
   </head>
@@ -38,18 +48,18 @@
             <button
               class="btn btn-danger menubutton_custom all_menu_items_fonts"
             >
-              Reserve
+              Order Online
             </button>
             <button
               class="btn btn-danger menubutton_custom all_menu_items_fonts"
             >
-              Contact
+              Bookings
             </button>
           </div>
           <button
             class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
           >
-            Explore
+            Walk Ins
           </button>
         </div>
       </nav>
@@ -78,18 +88,18 @@
             <button
               class="btn btn-danger menubutton_custom all_menu_items_fonts"
             >
-              Reserve
+              Order Online
             </button>
             <button
               class="btn btn-danger menubutton_custom all_menu_items_fonts"
             >
-              Contact
+              Bookings
             </button>
           </div>
           <button
             class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
           >
-            Explore
+            Walk Ins
           </button>
         </div>
       </nav>
@@ -99,13 +109,12 @@
     <!-- Hero Split -->
     <section class="hero-split">
       <div class="hero-text hero_rounded hero_padding">
-        <h1 class="main_hero_title_custom">Welcome to Lil Italy</h1>
+        <h1 class="main_hero_title_custom">Welcome to <br />Lil Italy</h1>
         <p>
-          <strong
-            >Cozy family-run Italian bistro & café in Södermalm, Stockholm.
-            Authentic food, coffee, cocktails, lunch & dinner. Warm, casual,
-            modern Italian food.
-          </strong>
+          Cozy family-run Italian bistro & café in Södermalm, Stockholm.
+          Authentic food, coffee, cocktails, lunch & dinner. Warm, casual,
+          modern Italian food.
+
           <br /><br />
           With family roots in Italy and over a decade in hospitality, we blend
           tradition with a modern touch. From morning espresso to late-night
@@ -134,57 +143,298 @@
       </div>
     </section>
 
-    <!-- About -->
-    <section class="split">
-      <div class="text">
-        <h2>Our Story</h2>
-        <p>
-          We are a family-run Italian restaurant serving handmade pasta,
-          wood-fired pizza, and fine wines from Italy.
+    <section class="">
+      <div class="hero-section">
+        <h2 class="p-3">
+          YOUR NEW FAVORITE<br />CAFE, BISTRO, RESTAURANT AND BAR.
+        </h2>
+        <p class="p-3 text_p_general">
+          Rooted in 13 years of experience, Lil Italy is a true family business
+          with deep Italian roots. Every detail—from the espresso machine to
+          imported ingredients—is authentically Italian. We’re not just a café,
+          bistro, restaurant, and bar, but a welcoming, multi-concept space
+          designed for everyone, any time of day.
         </p>
-      </div>
-      <div class="image"><img src="https://placehold.co/600x400" /></div>
-    </section>
-
-    <!-- Food Truck -->
-    <section class="split reverse">
-      <div class="image"><img src="https://placehold.co/600x400" /></div>
-      <div class="text">
-        <h2>Our Food Truck</h2>
-        <p>
-          Catch us around the city! Bringing Italian street food to festivals
-          and private events.
-        </p>
+        <a
+          href="https://lh3.googleusercontent.com/p/AF1QipP6RkVRbQG8zVggVmbYFR-nqUrHm4Ji_9TL-xTT=s680-w680-h510-rw"
+          target="_blank"
+        >
+          <button class="btn-custom btn_cutom_2">Menu</button></a
+        >
       </div>
     </section>
 
-    <!-- Farms -->
-    <section class="split">
-      <div class="text">
-        <h2>Farms & Friends</h2>
-        <p>
-          We partner with local farms for organic produce and sustainable meats.
-          Community and freshness first.
+    <section class="features-section hero-section">
+      <div class="container_custom container_custom_concept">
+        <p class="intro-text text_p_general">
+          All-day Italian hub: café mornings, bistro lunches, restaurant
+          dinners, bar nights— one venue, four experiences, always authentic.
         </p>
+        <h2>CAFE, BISTRO, RESTAURANT, BAR</h2>
       </div>
-      <div class="image"><img src="https://placehold.co/600x400" /></div>
+      <div class="features-grid">
+        <div class="feature-card feature-card-border">
+          <img src="images/7.jpg" alt="Espresso Coffee" />
+          <h3>Authentic Espresso Coffee</h3>
+          <p class="text_p_general text_p_general2">
+            Coffee, pastries, light bites, casual quick stop, walk-ins welcome
+          </p>
+        </div>
+        <div class="feature-card feature-card-border">
+          <img src="images/14.png" alt="Bistro Bites" />
+          <h3>Daily tasty Bistro Bites</h3>
+          <p class="text_p_general text_p_general2">
+            Cozy sit-down meals, small plates, family warmth, everyday dining
+          </p>
+        </div>
+        <div class="feature-card feature-card-border">
+          <img src="images/15.png" alt="Italian Cuisine" />
+          <h3>Full Modern Italian Cuisine</h3>
+          <p class="text_p_general text_p_general2">
+            Full menu, authentic Italian dishes, groups welcome, bookings,
+            dinner focus
+          </p>
+        </div>
+        <div class="feature-card feature-card-border">
+          <img src="images/16.png" alt="Cocktails" />
+          <h3>Cocktails from 11am – Late</h3>
+          <p class="text_p_general text_p_general2">
+            Cocktails, wine, social evenings, lively yet casual, from late lunch
+            to close
+          </p>
+        </div>
+      </div>
     </section>
 
-    <!-- Instagram -->
-    <section class="instagram">
-      <h2>Follow Us</h2>
+    <section class="features-section hero-section features_section_seating">
+      <div
+        class="container_custom container_custom_concept container_custom_seating text_p_general_rightaligned"
+      >
+        <p class="intro-text text_p_general">
+          Enjoy authentic Italian dining with flexible seating, cozy indoor
+          tables, lively outdoor terrace, and a charming upstairs space.
+        </p>
+        <h2>INDOOR, OUTDOORS & UPSTAIRS</h2>
+      </div>
+      <div class="features-grid features_grid_4">
+        <div class="feature-card">
+          <img src="images/11.jpg" alt="Espresso Coffee" />
+        </div>
+        <div class="feature-card">
+          <img src="images/12.jpg" alt="Bistro Bites" />
+        </div>
+        <div class="feature-card">
+          <img src="images/dog.jpg" alt="Italian Cuisine" />
+        </div>
+      </div>
+    </section>
+
+    <section class="instagram features-section hero-section">
+      <div class="container_custom container_custom_concept">
+        <p class="intro-text text_p_general">
+          Discover why Lil Italy is Södermalm’s favourite Italian spot, an all
+          day modern dining experience.
+        </p>
+        <h2>The Gallery</h2>
+      </div>
+
       <div class="grid">
-        <img src="https://placehold.co/300x300" />
-        <img src="https://placehold.co/300x300" />
-        <img src="https://placehold.co/300x300" />
-        <img src="https://placehold.co/300x300" />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.52.47 PM.png"
+          alt="Gallery 1"
+        />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.52.55 PM.png"
+          alt="Gallery 2"
+        />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.53.02 PM.png"
+          alt="Gallery 3"
+        />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.53.08 PM.png"
+          alt="Gallery 4"
+        />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.53.15 PM.png"
+          alt="Gallery 5"
+        />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.53.25 PM.png"
+          alt="Gallery 6"
+        />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.53.39 PM.png"
+          alt="Gallery 7"
+        />
+        <img
+          src="images/8gallery/Screenshot 2025-09-29 at 11.53.49 PM.png"
+          alt="Gallery 8"
+        />
+      </div>
+
+      <a href="https://www.instagram.com/lil_italyskanstull/" target="_blank">
+        <button class="btn-custom btn_cutom_2 instagram_follow">
+          Follow Us on Instagram
+        </button>
+      </a>
+    </section>
+
+    <section class="info-grid">
+      <div class="info-card light">
+        <h2>FIND US<br />ON THE MAP</h2>
+        <p class="find_us">
+          Find us in the heart of Södermalm, Stockholm’s vibrant, creative
+          district. Easy to reach, surrounded by culture, shops, and nightlife.
+          Your local spot for authentic Italian food, coffee, and cocktails.
+        </p>
+        <p class="find_us2">
+          <strong>Ringvägen 127A, 116 61 Stockholm</strong>
+        </p>
+        <button class="btn-custom btn_cutom_2">See More</button>
+      </div>
+
+      <div class="info-card map lilitalyMaps">
+        <img src="images/lilItalyMaps.png" alt="Gallery 7" />
+      </div>
+
+      <div class="info-card dark">
+        <h3>OPENING HOURS</h3>
+        <ul>
+          <li>MONDAY: 7 AM – 9 PM</li>
+          <li>TUESDAY: 7 AM – 9 PM</li>
+          <li>WEDNESDAY: 7 AM – 9 PM</li>
+          <li>THURSDAY: 7 AM – 9 PM</li>
+          <li>FRIDAY: 7 AM – 9 PM</li>
+          <li>SATURDAY: 9 AM – 9 PM</li>
+          <li>SUNDAY: 9 AM – 9 PM</li>
+        </ul>
+      </div>
+
+      <div class="info-card light">
+        <h3>CONTACT US</h3>
+        <p>
+          Email:
+          <a href="mailto:lilitaly.se@gmail.com">lilitaly.se@gmail.com</a>
+        </p>
+        <p>Phone: 0763019588</p>
+      </div>
+    </section>
+
+    <section class="reviews-section hero-section features_section_seating">
+      <div class="container_custom container_custom_concept">
+        <h2>REVIEWS</h2>
+        <p class="intro-text text_p_general">
+          Featured in The Fork, praised locally, countless 5-star reviews
+          highlight authentic Italian, cozy atmosphere, family service.
+        </p>
+      </div>
+
+      <div class="reviews-grid">
+        <div class="review-card">
+          <p class="stars">★★★★★</p>
+          <p>
+            Genuine Italian café with a heartwarming espresso and great lunch. I
+            had a lentil soup with a french toast and asparagus risotto as a
+            main dish. I’ll publish the pictures and you be the judge.
+          </p>
+          <p class="reviewer_custom"><strong>Glauk Elshani</strong></p>
+        </div>
+
+        <div class="review-card">
+          <p class="stars">★★★★★</p>
+          <p>
+            We have been to this little restaurant called Lil Italy often. It is
+            located at Ringvägen, Stockholm, Södermalm. We have been ordering
+            asparagus risotto, and it’s fantastic. It’s soft but not overcooked.
+            We have now had a glass of Sauvignon blanc, which fits very well
+            with the dish. The price-quality relation is excellent. It’s nice
+            sitting outside, and the street is not overly noisy. The boss and
+            the staff are extremely friendly—a little hidden jewel.
+          </p>
+          <p class="reviewer_custom"><strong>Martin Falk</strong></p>
+        </div>
+
+        <div class="review-card">
+          <p class="stars">★★★★★</p>
+          <p>
+            A perfect slice of Italy in a great location! Charming little bistro
+            with warm, friendly staff who make the whole experience even more
+            enjoyable. Big thanks for the lovely atmosphere, wonderful
+            hospitality, and of course – incredibly delicious food like from
+            heaven!! 🤩 Highly recommended!
+          </p>
+          <p class="reviewer_custom"><strong>Lenka Aubrechtová</strong></p>
+        </div>
+      </div>
+
+      <a
+        href="https://www.google.com/search?sca_esv=6710113de42d5150&tbm=lcl&sxsrf=AE3TifNyuL2KCybfi2SS6GQ23F9k69sfPg:1759186641653&q=Lil+Italy+Reviews&rflfq=1&num=20&stick=H4sIAAAAAAAAAONgkxI2MjQ2MjO3MDG1MLGwNDY1NTW23MDI-IpR0CczR8GzJDGnUiEotSwztbx4ESumGABNF-gTQgAAAA&rldimm=2132678458489355539&hl=en-SE&sa=X&ved=2ahUKEwj_gvr2iP-PAxWWHhAIHS5tLMYQ9fQKegQIZhAF&biw=1279&bih=875&dpr=1#lkt=LocalPoiReviews"
+        target="_blank"
+        ><button class="btn-custom btn_cutom_2">See More</button></a
+      >
+    </section>
+
+    <section class="">
+      <div class="hero-section booking_section">
+        <h2 class="">BOOK IN WITH US<br /></h2>
+        <p class="text_p_general">
+          Book your table online or just walk in, you are welcome anytime
+        </p>
+
+        <!-- Calendly inline widget begin -->
+        <div
+          class="calendly-inline-widget"
+          data-url="https://calendly.com/ethanbevan-dev/30min?text_color=7e1000&primary_color=7e1000"
+          style="min-width: 320px; height: 900px"
+        ></div>
+        <script
+          type="text/javascript"
+          src="https://assets.calendly.com/assets/external/widget.js"
+          async
+        ></script>
+        <!-- Calendly inline widget end -->
       </div>
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-      <p>© 2025 Lil Italy. All rights reserved.</p>
+
+    <footer class="footer_custom">
+      <div class="footer_top">
+        <ul class="footer_menu">
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+
+        <div class="footer_logo">
+          <img src="images/smalllogo.png" alt="Lil Italy Logo" />
+        </div>
+
+        <p class="footer_text">
+          Lil Italy, in the heart of Södermalm, Stockholm.
+        </p>
+      </div>
+
+      <div class="footer_bottom">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
     </footer>
+
+    <!-- Font Awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <!-- Font Awesome CDN -->
+    <script
+      src="https://kit.fontawesome.com/yourkitid.js"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
