polish 2am draft 1 complete mobile etc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lil Italy 2025</title>
+    <title>Lil Italy | Italian Bistro</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -22,6 +22,7 @@
     />
 
     <link rel="stylesheet" href="css/splide.min.css" />
+    <link rel="icon" type="image/png" href="images/smalllogo.png" />
     <script src="js/splide.min.js"></script>
   </head>
   <body>
@@ -37,30 +38,71 @@
           />
         </div>
 
-        <div class="d-flex button_and_menuitems">
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">About</a>
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Venue</a>
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Where</a>
+        <div class="menu_full_background">
+          <div class="click_button">
+            <i class="fas fa-bars"></i>
+          </div>
 
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Contact</a>
+          <div class="hide_menu">
+            <a
+              href="https://www.foodora.se/restaurant/v446/lilitaly"
+              target="_blank"
+            >
+              <li>Order Online</li></a
+            >
+            <a href="/#book-in"><li>Book In</li></a>
+            <a href="/#find-us"><li>Walk In</li></a>
+          </div>
+        </div>
+
+        <div class="d-flex button_and_menuitems">
+          <a
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            href="/#about"
+            >About</a
+          >
+          <a
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            href="/#cafe-bistro"
+            >Venue</a
+          >
+          <a
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            href="/#find-us"
+            >Where</a
+          >
+
+          <a
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            href="/#contact"
+            >Contact</a
+          >
 
           <div class="extra_button">
-            <button
-              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            <a
+              href="https://www.foodora.se/restaurant/v446/lilitaly"
+              target="_blank"
+              ><button
+                class="btn btn-danger menubutton_custom all_menu_items_fonts"
+              >
+                Order Online
+              </button></a
             >
-              Order Online
-            </button>
-            <button
-              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            <a href="/#book-in">
+              <button
+                class="btn btn-danger menubutton_custom all_menu_items_fonts"
+              >
+                Bookings
+              </button></a
             >
-              Bookings
-            </button>
           </div>
-          <button
-            class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
+          <a href="/#find-us"
+            ><button
+              class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
+            >
+              Walk Ins
+            </button></a
           >
-            Walk Ins
-          </button>
         </div>
       </nav>
     </div>
@@ -77,30 +119,71 @@
           />
         </div>
 
-        <div class="d-flex button_and_menuitems">
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">About</a>
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Venue</a>
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Where</a>
+        <div class="menu_full_background">
+          <div class="click_button">
+            <i class="fas fa-bars"></i>
+          </div>
 
-          <a class="fs-4 menuitems_custom px-3 all_menu_items_fonts">Contact</a>
+          <div class="hide_menu">
+            <a
+              href="https://www.foodora.se/restaurant/v446/lilitaly"
+              target="_blank"
+            >
+              <li>Order Online</li></a
+            >
+            <a href="/#book-in"><li>Book In</li></a>
+            <a href="/#find-us"><li>Walk In</li></a>
+          </div>
+        </div>
+
+        <div class="d-flex button_and_menuitems">
+          <a
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            href="/#about"
+            >About</a
+          >
+          <a
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            href="/#cafe-bistro"
+            >Venue</a
+          >
+          <a
+            href="/#find-us"
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            >Where</a
+          >
+
+          <a
+            class="fs-4 menuitems_custom px-3 all_menu_items_fonts"
+            href="/#contact"
+            >Contact</a
+          >
 
           <div class="extra_button">
-            <button
-              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            <a
+              href="https://www.foodora.se/restaurant/v446/lilitaly"
+              target="_blank"
+              ><button
+                class="btn btn-danger menubutton_custom all_menu_items_fonts"
+              >
+                Order Online
+              </button></a
             >
-              Order Online
-            </button>
-            <button
-              class="btn btn-danger menubutton_custom all_menu_items_fonts"
+            <a href="/#book-in"
+              ><button
+                class="btn btn-danger menubutton_custom all_menu_items_fonts"
+              >
+                Bookings
+              </button></a
             >
-              Bookings
-            </button>
           </div>
-          <button
-            class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
+          <a href="/#find-us"
+            ><button
+              class="btn btn-danger menubutton_custom menubutton_custom2 all_menu_items_fonts explore_button"
+            >
+              Walk Ins
+            </button></a
           >
-            Walk Ins
-          </button>
         </div>
       </nav>
     </div>
@@ -110,7 +193,7 @@
     <section class="hero-split">
       <div class="hero-text hero_rounded hero_padding">
         <h1 class="main_hero_title_custom">Welcome to <br />Lil Italy</h1>
-        <p>
+        <p style="color: white">
           Cozy family-run Italian bistro & café in Södermalm, Stockholm.
           Authentic food, coffee, cocktails, lunch & dinner. Warm, casual,
           modern Italian food.
@@ -121,7 +204,11 @@
           cocktails, our bistro welcomes everyone. Book online or walk in
           anytime.
         </p>
-        <button class="btn-custom all_menu_items_fonts">Reserve</button>
+        <a href="/#book-in"
+          ><button class="btn btn-custom all_menu_items_fonts">
+            Reserve
+          </button></a
+        >
       </div>
       <!-- Splide root -->
       <div class="hero-img">
@@ -143,8 +230,8 @@
       </div>
     </section>
 
-    <section class="">
-      <div class="hero-section">
+    <section class="" id="about">
+      <div class="hero-section hero-section-favourite">
         <h2 class="p-3">
           YOUR NEW FAVORITE<br />CAFE, BISTRO, RESTAURANT AND BAR.
         </h2>
@@ -159,20 +246,20 @@
           href="https://lh3.googleusercontent.com/p/AF1QipP6RkVRbQG8zVggVmbYFR-nqUrHm4Ji_9TL-xTT=s680-w680-h510-rw"
           target="_blank"
         >
-          <button class="btn-custom btn_cutom_2">Menu</button></a
+          <button class="btn btn-custom btn_cutom_2">Menu</button></a
         >
       </div>
     </section>
 
-    <section class="features-section hero-section">
+    <section class="features-section hero-section" id="cafe-bistro">
       <div class="container_custom container_custom_concept">
         <p class="intro-text text_p_general">
           All-day Italian hub: café mornings, bistro lunches, restaurant
           dinners, bar nights— one venue, four experiences, always authentic.
         </p>
-        <h2>CAFE, BISTRO, RESTAURANT, BAR</h2>
+        <h2 class="text_align_right_custom">CAFE, BISTRO, RESTAURANT, BAR</h2>
       </div>
-      <div class="features-grid">
+      <div class="features-grid features-grid-concept">
         <div class="feature-card feature-card-border">
           <img src="images/7.jpg" alt="Espresso Coffee" />
           <h3>Authentic Espresso Coffee</h3>
@@ -188,21 +275,37 @@
           </p>
         </div>
         <div class="feature-card feature-card-border">
-          <img src="images/15.png" alt="Italian Cuisine" />
+          <img src="images/13.png" alt="Italian Cuisine" />
           <h3>Full Modern Italian Cuisine</h3>
           <p class="text_p_general text_p_general2">
             Full menu, authentic Italian dishes, groups welcome, bookings,
             dinner focus
           </p>
         </div>
+
         <div class="feature-card feature-card-border">
-          <img src="images/16.png" alt="Cocktails" />
+          <img src="images/1.jpg" alt="Cocktails" />
           <h3>Cocktails from 11am – Late</h3>
           <p class="text_p_general text_p_general2">
             Cocktails, wine, social evenings, lively yet casual, from late lunch
             to close
           </p>
         </div>
+      </div>
+      <div class="buttons_concept_container" style="">
+        <a
+          href="https://www.foodora.se/restaurant/v446/lilitaly"
+          target="_blank"
+        >
+          <button class="btn btn-danger menubutton_custom all_menu_items_fonts">
+            Order Online
+          </button></a
+        >
+        <a href="/#book-in">
+          <button class="btn btn-danger menubutton_custom all_menu_items_fonts">
+            Bookings
+          </button></a
+        >
       </div>
     </section>
 
@@ -214,7 +317,7 @@
           Enjoy authentic Italian dining with flexible seating, cozy indoor
           tables, lively outdoor terrace, and a charming upstairs space.
         </p>
-        <h2>INDOOR, OUTDOORS & UPSTAIRS</h2>
+        <h2 class="text_align_left_custom">INDOOR, OUTDOORS & UPSTAIRS</h2>
       </div>
       <div class="features-grid features_grid_4">
         <div class="feature-card">
@@ -223,14 +326,16 @@
         <div class="feature-card">
           <img src="images/12.jpg" alt="Bistro Bites" />
         </div>
-        <div class="feature-card">
+        <div class="feature-card feature-card_3rdImage">
           <img src="images/dog.jpg" alt="Italian Cuisine" />
         </div>
       </div>
     </section>
 
     <section class="instagram features-section hero-section">
-      <div class="container_custom container_custom_concept">
+      <div
+        class="container_custom container_custom_concept container_custom_gallery"
+      >
         <p class="intro-text text_p_general">
           Discover why Lil Italy is Södermalm’s favourite Italian spot, an all
           day modern dining experience.
@@ -239,10 +344,7 @@
       </div>
 
       <div class="grid">
-        <img
-          src="images/8gallery/Screenshot 2025-09-29 at 11.52.47 PM.png"
-          alt="Gallery 1"
-        />
+        <img src="images/16.png" alt="Gallery 1" />
         <img
           src="images/8gallery/Screenshot 2025-09-29 at 11.52.55 PM.png"
           alt="Gallery 2"
@@ -274,13 +376,13 @@
       </div>
 
       <a href="https://www.instagram.com/lil_italyskanstull/" target="_blank">
-        <button class="btn-custom btn_cutom_2 instagram_follow">
-          Follow Us on Instagram
+        <button class="btn btn-custom btn_cutom_2 instagram_follow">
+          Follow our Instagram
         </button>
       </a>
     </section>
 
-    <section class="info-grid">
+    <section class="info-grid info-grid-maps" id="find-us">
       <div class="info-card light">
         <h2>FIND US<br />ON THE MAP</h2>
         <p class="find_us">
@@ -291,15 +393,17 @@
         <p class="find_us2">
           <strong>Ringvägen 127A, 116 61 Stockholm</strong>
         </p>
-        <button class="btn-custom btn_cutom_2">See More</button>
+        <a href="https://maps.app.goo.gl/RBjArjmQbwgNk7Eo6" target="_blank"
+          ><button class="btn btn-custom btn_cutom_2">See More</button></a
+        >
       </div>
 
-      <div class="info-card map lilitalyMaps">
+      <div class="info-card map lilitalyMaps" id="contact">
         <img src="images/lilItalyMaps.png" alt="Gallery 7" />
       </div>
 
       <div class="info-card dark">
-        <h3>OPENING HOURS</h3>
+        <h2>OPENING HOURS</h2>
         <ul>
           <li>MONDAY: 7 AM – 9 PM</li>
           <li>TUESDAY: 7 AM – 9 PM</li>
@@ -312,7 +416,7 @@
       </div>
 
       <div class="info-card light">
-        <h3>CONTACT US</h3>
+        <h2>CONTACT US</h2>
         <p>
           Email:
           <a href="mailto:lilitaly.se@gmail.com">lilitaly.se@gmail.com</a>
@@ -321,8 +425,12 @@
       </div>
     </section>
 
-    <section class="reviews-section hero-section features_section_seating">
-      <div class="container_custom container_custom_concept">
+    <section
+      class="reviews-section hero-section features_section_seating features_section_reviews"
+    >
+      <div
+        class="container_custom container_custom_concept features_section_reviews_reverse"
+      >
         <h2>REVIEWS</h2>
         <p class="intro-text text_p_general">
           Featured in The Fork, praised locally, countless 5-star reviews
@@ -371,13 +479,13 @@
       <a
         href="https://www.google.com/search?sca_esv=6710113de42d5150&tbm=lcl&sxsrf=AE3TifNyuL2KCybfi2SS6GQ23F9k69sfPg:1759186641653&q=Lil+Italy+Reviews&rflfq=1&num=20&stick=H4sIAAAAAAAAAONgkxI2MjQ2MjO3MDG1MLGwNDY1NTW23MDI-IpR0CczR8GzJDGnUiEotSwztbx4ESumGABNF-gTQgAAAA&rldimm=2132678458489355539&hl=en-SE&sa=X&ved=2ahUKEwj_gvr2iP-PAxWWHhAIHS5tLMYQ9fQKegQIZhAF&biw=1279&bih=875&dpr=1#lkt=LocalPoiReviews"
         target="_blank"
-        ><button class="btn-custom btn_cutom_2">See More</button></a
+        ><button class="btn btn-custom btn_cutom_2">See More</button></a
       >
     </section>
 
-    <section class="">
+    <section class="" id="book-in">
       <div class="hero-section booking_section">
-        <h2 class="">BOOK IN WITH US<br /></h2>
+        <h2 class="">BOOK IN<br /></h2>
         <p class="text_p_general">
           Book your table online or just walk in, you are welcome anytime
         </p>
