--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
     <!-- Hero Split -->
     <section class="hero-split">
       <div class="hero-text hero_rounded hero_padding">
-        <h1 class="main_hero_title_custom">Welcome to <br />Lil Italy</h1>
+        <div style="width: 100%">
+          <h1 class="main_hero_title_custom">Welcome to <br />Lil Italy</h1>
+        </div>
         <p style="color: white">
           Cozy family-run Italian bistro & café in Södermalm, Stockholm.
           Authentic food, coffee, cocktails, lunch & dinner. Warm, casual,
