--- a/home/index.html
+++ b/home/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -544,16 +544,18 @@
           </p>
 
           <!-- Calendly inline widget begin -->
+          <!-- Calendly inline widget begin -->
           <div
             class="calendly-inline-widget"
-            data-url="https://calendly.com/ethanbevan-dev/30min?text_color=7e1000&primary_color=7e1000"
-            style="min-width: 320px; height: 900px"
+            data-url="https://calendly.com/lilitaly-se/2hr?primary_color=7e1000"
+            style="min-width: 320px; height: 700px"
           ></div>
           <script
             type="text/javascript"
             src="https://assets.calendly.com/assets/external/widget.js"
             async
           ></script>
+          <!-- Calendly inline widget end -->
           <!-- Calendly inline widget end -->
         </div>
       </section>
